--- a/arch/arm/boot/dts/zynq-zc702-adv7511.dtsi
+++ b/arch/arm/boot/dts/zynq-zc702-adv7511.dtsi
@@ -103,8 +103,8 @@
 			compatible = "adi,axi-clkgen-2.00.a";
 			reg = <0x79000000 0x10000>;
 			#clock-cells = <0>;
-			clocks = <&clkc 16>;
-			clock-names = "clkin1";
+			clocks = <&clkc 15>, <&clkc 16>;
+			clock-names = "s_axi_aclk", "clkin1";
 		};
 
 		axi_hdmi@70e00000 {
