--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9008-1.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9008-1.dts
@@ -93,8 +93,8 @@
 			compatible = "adi,axi-clkgen-2.00.a";
 			reg = <0x83c10000 0x10000>;
 			#clock-cells = <0>;
-			clocks = <&clk0_ad9528 1>;
-			clock-names = "clkin1";
+			clocks = <&zynqmp_clk 71>, <&clk0_ad9528 1>;
+			clock-names = "s_axi_aclk", "clkin1";
 			clock-output-names = "axi_rx_clkgen";
 		};
 
